# solid_biljard

./: .gitignore  Cargo.toml  README.md  build.rs  dev  import_map.json
client/: bun.lockb  index.html  package.json
client/src/: App.jsx  App.module.sass  _global.sass  _variables.sass  appState.js  index.jsx  index.sass
client/src/components/: BookingForm.jsx  EmailCodeForm.jsx  Layout.jsx  generic.js
client/src/components/BookingForm/: BookingForm.module.sass  DateSelector.js
client/src/components/EmailCodeForm/: EmailCodeForm.module.sass  staging.js
client/src/components/Layout/: Layout.module.sass
client/src/components/generic/: Button.jsx  DigitInput.jsx  Form.jsx  Generic.module.sass  TextInput.jsx
client/src/routes/: Book.jsx  Home.jsx  Motd.jsx  auth.js
client/src/routes/Home/: Home.module.sass
client/src/routes/Motd/: Motd.module.sass  getMotd.js
client/src/routes/auth/: EmailCode.jsx
client/src/routes/auth/EmailCode/: EmailCode.module.sass
client/src/solidjs/: ext.js
client/src/websocket/: main.js  message_handler.js  socket.js
migrations/: 20240606123534_initial.sql
sqlite_migrations/: 20240607101731_initial.sql  20240629122600_add_password_field_to_users.sql
src/: build.rs  client_watcher.rs  db.rs  ext.rs  main.rs  password_hash.rs  router.rs  state.rs
src/api/: auth.rs  book.rs  mod.rs  motd.rs  types.rs  ws.rs
src/api/auth/: email_code.rs  password.rs
src/client/: build.rs  mod.rs  watch.rs
src/db/: booked_days.rs  postgres.rs  sqlite.rs  types.rs
src/db/accessors/: booked_days.rs  mod.rs  users.rs
