[package]
name = "solid_biljard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["ws"] }
watchexec = "=4.1.0"
watchexec-signals = "=3.0.0"

tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }

serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "sqlite"] }
argon2 = "0.5.3"
uuid = { version = "1.9.1", features = ["v4"] }

[features]
default = ["sqlite"]
sqlite = []
postgres = []
